add prettier settings and project setup

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "backend_project",
   "version": "1.0.0",
   "description": "A backedn project with chai aur code",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -15,6 +15,7 @@
   "author": "Nitish",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "3.1.4"
+    "nodemon": "3.1.4",
+    "prettier": "^3.3.3"
   }
 }
